Add "Mark all as read" button
#comment It uses the "messages" field in MessagesRecyclerViewAdapter, which is made public, if that is not the recommended way to do it please explain what i should do instead
Affected: MailboxActivity.kt, MessagesRecyclerViewAdapter.kt, mailbox_options_menu.xml, strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1111,5 +1111,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <!-- region Proton Calendar -->
     <string name="button_open_in_proton_calendar">Open in Proton Calendar</string>
+    <string name="mark_all_read">Mark all as read</string>
     <!-- endregion -->
 </resources>
