--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -790,7 +790,7 @@
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Antivirus-forstyrrelse&lt;/i&gt; - Deaktivér midlertidigt eller fjern din antivirus-software.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proxy/Firewall-forstyrrelse&lt;/i&gt; - Deaktivér eventuelle proxier eller firewalls, eller kontakt din netværksadministrator.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proton er nede&lt;/i&gt; - Tjek &lt;a href=\"http://protonstatus.com/\"&gt;Proton Status&lt;/a&gt; for vores systemstatus.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Kan stadig ikke finde en løsning&lt;/i&gt; - Kontakt os direkte via vores &lt;a href=\"https://protonmail.com/support-form\"&gt;support formular&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.com\"&gt;e-mail&lt;/a&gt; (support@protonmail.com), eller &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Kan stadig ikke finde en løsning&lt;/i&gt; - Kontakt os direkte via vores &lt;a href=\"https://protonmail.com/support-form\"&gt;support formular&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt;e-mail&lt;/a&gt; (support@protonmail.zendesk.com), eller &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
