--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -790,7 +790,7 @@
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Εμπλοκή Antivirus&lt;/i&gt; - Απενεργοποιήστε προσωρινά ή καταργήστε το λογισμικό προστασίας από ιούς.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proxy/Εμπλοκή Firewall&lt;/i&gt; - Απενεργοποιήστε τυχόν διακομιστές μεσολάβησης ή τείχη προστασίας ή επικοινωνήστε με τον διαχειριστή του δικτύου σας.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Το Proton έχει πέσει&lt;/i&gt; - Ελέγξτε &lt;a href=\"http://protonstatus.com/\"&gt;Proton Status&lt;/a&gt; για την κατάσταση των συστημάτων μας.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Still δεν μπορείτε να βρείτε λύση;&lt;/i&gt; - Επικοινωνήστε μαζί μας απευθείας μέσω της &lt;a href=\"https://protonmail.com/support-form\"&gt;φόρμας υποστήριξης&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.com\"&gt;email&lt;/a&gt; (support@protonmail.com), ή &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Still δεν μπορείτε να βρείτε λύση;&lt;/i&gt; - Επικοινωνήστε μαζί μας απευθείας μέσω της &lt;a href=\"https://protonmail.com/support-form\"&gt;φόρμας υποστήριξης&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt;email&lt;/a&gt; (support@protonmail.zendesk.com), ή &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
