--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -790,7 +790,7 @@ compre más
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Interferencia del antivirus&lt;/i&gt; - Deshabilita o elimina temporalmente tu software de antivirus.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Interferencia del proxy/firewall&lt;/i&gt; - Desactiva cualquier proxy o firewall, o ponte en contacto con tu administrador de red.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proton está caído&lt;/i&gt; - Comprueba &lt;a href=\"http://protonstatus.com/\"&gt;Proton Status&lt;/a&gt; para ver el estado de nuestro sistema.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Todavía no puedes encontrar una solución&lt;/i&gt; - Contáctanos directamente a través de nuestro &lt;a href=\"https://protonmail.com/support-form\"&gt;formulario de soporte&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.com\"&gt;correo electrónico&lt;/a&gt; (support@protonmail. om), o &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Todavía no puedes encontrar una solución&lt;/i&gt; - Contáctanos directamente a través de nuestro &lt;a href=\"https://protonmail.com/support-form\"&gt;formulario de soporte&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt;correo electrónico&lt;/a&gt; (support@protonmail. om), o &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
