--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -790,7 +790,7 @@
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Truflanir vegna vírusvarna&lt;/i&gt; - Gerðu vírusvarnaforritið þitt tímabundið óvirkt.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Truflanir vegna milliþjóna/eldveggja&lt;/i&gt; - Gerðu alla eldveggi og milliþjóna (proxies) óvirka, eða hafðu samband við kerfisstjórann þinn.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proton liggur niðri&lt;/i&gt; - Athugaðu &lt;a href=\"http://protonstatus.com/\"&gt;stöðu Proton&lt;/a&gt; til að sjá ástandið á kerfinu okkar.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Finnurðu ekki ennþá neina lausn&lt;/i&gt; - Hafðu beint samband við okkur í gegnum &lt;a href=\"https://protonmail.com/support-form\"&gt;aðstoðarsíðuna okkar&lt;/a&gt;, með &lt;a href=\"mailto:support@protonmail.com\"&gt; tölvupósti&lt;/a&gt; (support@protonmail.com), eða á &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Finnurðu ekki ennþá neina lausn&lt;/i&gt; - Hafðu beint samband við okkur í gegnum &lt;a href=\"https://protonmail.com/support-form\"&gt;aðstoðarsíðuna okkar&lt;/a&gt;, með &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt; tölvupósti&lt;/a&gt; (support@protonmail.zendesk.com), eða á &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
