--- a/app/src/main/res/values-kab/strings.xml
+++ b/app/src/main/res/values-kab/strings.xml
@@ -790,7 +790,7 @@
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Amyadef n umgal ivirusen&lt;/i&gt; - Sens neɣ kkes aseɣẓan-ik·im amgal ivirusen i kra n wakud.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Amyadef n upṛuksi/aɣrab n tmes&lt;/i&gt; - Sens akk ipṛuksiyen neɣ iɣraben n tmes, neɣ nermes anedbal-ik·im n uẓeṭṭa.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proton ur itteddu ara&lt;/i&gt; - Wali &lt;a href=\"http://protonstatus.com/\"&gt;Addad n Proton&lt;/a&gt; i waddad n unagraw-nneɣ.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Mazal ur d-tufiḍ ara tifrat&lt;/i&gt;- Nermes-aɣ-d srid s ubrid n &lt;a href=\"https://protonmail.com/support-form\"&gt;tferkit n tallelt&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.com\"&gt;imayl&lt;/a&gt; (support@protonmail.com), neɣ &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Mazal ur d-tufiḍ ara tifrat&lt;/i&gt;- Nermes-aɣ-d srid s ubrid n &lt;a href=\"https://protonmail.com/support-form\"&gt;tferkit n tallelt&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt;imayl&lt;/a&gt; (support@protonmail.zendesk.com), neɣ &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
