--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -790,7 +790,7 @@
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Antivirus storting&lt;/i&gt; - Zet antivirussoftware tijdelijk uit of verwijdert.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proxy/Firewall interferentie&lt;/i&gt; - Schakel eventuele proxy\'s of firewalls uit, of neem contact op met uw netwerkbeheerder.
         &lt;br/&gt;&lt;br/&gt;&lt;i&gt;Proton is offline&lt;/i&gt; - Check &lt;a href=\"http://protonstatus.com/\"&gt;Proton Status&lt;/a&gt; voor onze systeemstatus.
-        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;kan nog steeds geen oplossing vinden&lt;/i&gt; - Neem rechtstreeks contact met ons op via ons &lt;a href=\"https://protonmail.com/support-form\"&gt;ondersteuningsformulier&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.com\"&gt;e-mail&lt;/a&gt; (support@protonmail). of &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
+        &lt;br/&gt;&lt;br/&gt;&lt;i&gt;kan nog steeds geen oplossing vinden&lt;/i&gt; - Neem rechtstreeks contact met ons op via ons &lt;a href=\"https://protonmail.com/support-form\"&gt;ondersteuningsformulier&lt;/a&gt;, &lt;a href=\"mailto:support@protonmail.zendesk.com\"&gt;e-mail&lt;/a&gt; (support@protonmail). of &lt;a href=\"https://twitter.com/ProtonMail\"&gt;Twitter&lt;/a&gt;.
     </string>
     <!-- endregion -->
     <!-- region errors -->
